--- a/index.css
+++ b/index.css
@@ -39,3 +39,11 @@ body {
   font-size: 1em;
   animation: snow linear infinite;
 }
+
+/* Animation Delays */
+.animation-delay-2000 {
+  animation-delay: 2s;
+}
+.animation-delay-4000 {
+  animation-delay: 4s;
+}
